# python-book

./: README.md
chapter_03/example_01/: hello.py
chapter_03/example_02/: equation.py
chapter_03/example_03/: equation.py
chapter_03/example_04/: frequency_interval.py
chapter_03/example_05/: frequency_interval.py
chapter_03/example_06/: frequency_interval.py
chapter_03/example_07/: equation.py
chapter_03/example_08/: equation.py
chapter_03/example_09/: if_assigment.py
chapter_03/example_10/: if_assigment.py
chapter_03/example_11/: while.py
chapter_03/example_12/: password.py
chapter_03/example_13/: prime_numbers.py
chapter_03/example_14/: no_walrus.py
chapter_03/example_15/: walrus.py
chapter_03/example_16/: password.py
chapter_03/example_17/: speed.py
chapter_04/example_01/: remove_all.py
chapter_04/example_02/: find_all.py
chapter_05/example_01/: for_double.py
chapter_05/example_02/: for_sqrt_break.py
chapter_05/example_03/: for_sqrt_continue.py
chapter_05/example_04/: after_for.py
chapter_05/example_05/: after_for_error.py
chapter_05/example_06/: after_for_none.py
chapter_05/example_07/: for_clear.py
chapter_05/example_08/: for_create_list.py
chapter_05/example_09/: list_comprehension.py
chapter_05/example_10/: for_if_sqrt.py
chapter_05/example_11/: list_comprehension_if.py
chapter_05/example_12/: range_factorial.py
chapter_05/example_13/: range_factorial_2.py
chapter_05/example_14/: enumerate.py  range_no_enumerate.py
chapter_05/example_17/: dist_zip.py
chapter_17/example_01/: hello.py  pyproject.toml
(+347 files in other folders)
